<resources>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="FloatAdd128">+128</string>
    <string name="FloatAdd16">+16</string>
    <string name="FloatAdd64">+64</string>
    <string name="FloatChkDeadLost">死亡不掉落</string>
    <string name="FloatChkFly">飞行(双击跳跃飞行)</string>
    <string name="FloatChkFullBlood">无敌</string>
    <string name="FloatChkGameMode">创造(2秒内不可重复切换)</string>
    <string name="FloatChkGameTime">白天</string>
    <string name="FloatChkRunSpeed">疾跑</string>
    <string name="FloatChkShowBlood">生物显血</string>
    <string name="FloatChkSmallMap">小地图</string>
    <string name="FloatGetCoordinate">传送</string>
    <string name="FloatGetCoordinate2">传送</string>
    <string name="FloatGetCoordinate3">传送</string>
    <string name="FloatGetSpawn">返回重生点</string>
    <string name="FloatSaveCoordinate">保存坐标点1</string>
    <string name="FloatSaveCoordinate2">保存坐标点2</string>
    <string name="FloatSaveCoordinate3">保存坐标点3</string>
    <string name="FloatSetSpawn">设置重生点</string>
    <string name="FloatSlotBlock">方块</string>
    <string name="FloatSlotCrop">植物</string>
    <string name="FloatSlotDyes">染色</string>
    <string name="FloatSlotFood">食物</string>
    <string name="FloatSlotJs">ＪＳ</string>
    <string name="FloatSlotMiscellaneous">杂项</string>
    <string name="FloatSlotOreitems">矿物</string>
    <string name="FloatSlotSave">保存</string>
    <string name="FloatSlotSpawn">蛋</string>
    <string name="FloatSlotTools">工具</string>
    <string name="FloatTipCoordinate">还未保存坐标</string>
    <string name="Float_InsZones">副本模式</string>
    <string name="Float_InsZones_Breakthrough">闯关模式</string>
    <string name="Float_InsZones_Breakthrough_Tips">来挑战各式各样的关卡吧！</string>
    <string name="Float_InsZones_Bulletin">"欢迎向我们反馈更多您宝贵的建议与意见！
官方QQ群：433180551"</string>
    <string name="Float_InsZones_Enter">进入</string>
    <string name="Float_InsZones_Experience">体验版</string>
    <string name="Float_InsZones_Experience_Tips">请到平坦地面开启哟！</string>
    <string name="Float_InsZones_Maze">迷宫逃亡</string>
    <string name="Float_InsZones_Maze_Tips">快来找到出口吧！</string>
    <string name="Float_InsZones_Parkour">跑酷</string>
    <string name="Float_InsZones_Parkour_Tips">奔跑吧，通关之后你就是跑酷大神！</string>
    <string name="Float_InsZones_Tips">Tips:</string>
    <string name="Float_InsZones_TobeExpected">敬请期待</string>
    <string name="Float_InsZones_Training">新手训练营</string>
    <string name="Float_InsZones_Training_Tips">欢迎来新手训练营学习！</string>
    <string name="Float_InsZones_Trap">红石陷阱</string>
    <string name="Float_InsZones_Trap_Tips">运用风骚的步伐，快速闯出陷阱吧！</string>
    <string name="Float_InsZones_UnExhaustible">无尽模式</string>
    <string name="Float_InsZones_UnExhaustible_Tips">无尽的战斗在等待着你！</string>
    <string name="MenuBackup">复制</string>
    <string name="MenuBackupMap">复制地图</string>
    <string name="MenuCancle">取消</string>
    <string name="MenuClose">关闭</string>
    <string name="MenuDel">删除</string>
    <string name="MenuDetail">详情</string>
    <string name="MenuExport">导出</string>
    <string name="MenuExportMapToZip">导出为压缩包</string>
    <string name="MenuOpen">开启</string>
    <string name="MenuRecover">还原</string>
    <string name="MenuRename">重命名</string>
    <string name="MenuShare">分享给朋友</string>
    <string name="RealNameSharing_ErrorChangeRemove">11</string>
    <string name="ResJsDown">ＪＳ下载</string>
    <string name="ResJsImport">ＪＳ导入</string>
    <string name="ResJsMgr">ＪＳ管理</string>
    <string name="ResMapCate">分类</string>
    <string name="ResMapDown">地图下载</string>
    <string name="ResMapExport">地图导出</string>
    <string name="ResMapImport">地图导入</string>
    <string name="ResMapMgr">地图管理</string>
    <string name="ResMapRank">排行</string>
    <string name="ResSkinDown">皮肤下载</string>
    <string name="ResSkinImport">皮肤导入</string>
    <string name="ResSkinMgr">皮肤管理</string>
    <string name="ResWoodDown">材质下载</string>
    <string name="ResWoodImport">材质导入</string>
    <string name="ResWoodMgr">材质管理</string>
    <string name="TipMC012Down">将为您下载插件(15MB)以支持最新功能</string>
    <string name="TipMCDownload">"您还没安装‘我的世界’这款游戏。
赶紧来下载吧~"</string>
    <string name="TipMCNoneJs">"您还没有下载过ＪＳ，

赶紧来下载吧~"</string>
    <string name="TipMCNoneMap">"您还没有下载过地图，

赶紧来下载吧~"</string>
    <string name="TipMCNoneSkin">"您还没有下载过皮肤，

赶紧来下载吧~"</string>
    <string name="TipMCNoneWood">"您还没有下载过材质，

赶紧来下载吧~"</string>
    <string name="TipMCOldMap">"0.11.0的build1版使用0.10.5的地图会闪退。
请更换版本再下载地图！"</string>
    <string name="TipMCOldVerDown">将为您下载插件(14MB)以支持最新功能</string>
    <string name="TipMCOldVerInstall">将安装插件以支持最新功能。</string>
    <string name="accessibility_description">启动抢红包服务（使用QQ，微信）</string>
    <string name="account_lock">账户已被锁，不能进行此操作！</string>
    <string name="achievement_answer_1">成就榜是葫芦丝在葫芦侠我的世界获得所有成就数的排行榜，是葫芦丝的荣耀。</string>
    <string name="achievement_answer_2">成就榜能看到整个葫芦侠我的世界的成就排名，能看到你当前所处的排名位置，装逼必备神器。</string>
    <string name="achievement_answer_3">通过完成日常任务获得成就，目前可以获得成就的地方有登陆、游戏、副本、联机、挖掘、附魔、击杀、死亡、地图、插件、皮肤、材质；成就榜只显示1000名成就最高的用户。</string>
    <string name="achievement_quest_1">成就榜是什么？</string>
    <string name="achievement_quest_2">成就榜有什么用？</string>
    <string name="achievement_quest_3">成就榜怎么上？</string>
    <string name="achievement_rule">成就榜说明</string>
    <string name="action_article">工具专题</string>
    <string name="action_card">买定离手</string>
    <string name="action_download">下载中心</string>
    <string name="action_help">帮助中心</string>
    <string name="action_home">三楼主页</string>
    <string name="action_message">消息中心</string>
    <string name="action_movie">快播影视导航</string>
    <string name="action_navigator">导航</string>
    <string name="action_profile">个人中心</string>
    <string name="action_setting">系统设置</string>
    <string name="action_settings">Settings</string>
    <string name="add_photo">添加照片</string>
    <string name="album_no_modified">没有修改相册</string>
    <string name="album_photo_count_max">最多只能选%d张图片</string>
    <string name="all">全部</string>
    <string name="all_categories">全部版块</string>
    <string name="app_guide">工具使用指南</string>
    <string name="app_name">葫芦侠我的世界</string>
    <string name="app_name_short">Minecraft PE</string>
    <string name="app_name_short_demo">Minecraft PE Demo</string>
    <string name="app_text">text</string>
    <string name="app_title">葫芦侠我的世界</string>
    <string name="apply_space_style_failed">设置失败，网络问题</string>
    <string name="apply_space_style_succ">设置个性模版成功</string>
    <string name="arc_path">"街机游戏文件存储路径为
内置存储卡/0roms/ARC"</string>
    <string name="audit">待处理申请</string>
    <string name="audit_list">审核中</string>
    <string name="audit_ok">已通过</string>
    <string name="audit_reject">审核不过</string>
    <string name="auditing">待审核</string>
    <string name="author">作者 ：</string>
    <string name="author_noless_tips">作者不能少于2个字符</string>
    <string name="author_nomore_tips">作者不能多于8个字符</string>
    <string name="back">返回</string>
    <string name="backup">备份</string>
    <string name="be_big">变成大家伙</string>
    <string name="be_small">变成小不点</string>
    <string name="blank" />
    <string name="btn_cancel">取消</string>
    <string name="btn_cdn">图片诊断</string>
    <string name="btn_commit">确定</string>
    <string name="btn_confirm">朕知道了</string>
    <string name="btn_download">网速诊断</string>
    <string name="btn_ping">域名诊断</string>
    <string name="bucket_name">%1$s(%2$d)</string>
    <string name="bucket_name_all">全部(%1$d)</string>
    <string name="buff">增益</string>
    <string name="bug_describe">描述有误</string>
    <string name="bug_download">无法下载</string>
    <string name="bug_fare">恶意扣费</string>
    <string name="bug_install">无法安装</string>
    <string name="bug_privacy">隐私泄露</string>
    <string name="bug_quality">质量较差</string>
    <string name="bug_update">无法更新</string>
    <string name="bug_version">版本较旧</string>
    <string name="button_cancel_download">取消</string>
    <string name="button_queue_for_wifi">排队</string>
    <string name="button_start_now">立即开始</string>
    <string name="buy_space_style_failed">购买失败，网络问题</string>
    <string name="buy_space_style_succ">购买成功，正在应用模版</string>
    <string name="by_followed">关注</string>
    <string name="byte_0">0 K</string>
    <string name="cancel">取消</string>
    <string name="cancel_potion_tips">解除药水效果完毕...</string>
    <string name="cancel_running_download">取消</string>
    <string name="cancle">取消</string>
    <string name="cate_desc">版块介绍</string>
    <string name="cate_rule">版块规定</string>
    <string name="category">分类</string>
    <string name="category_desc">版块简介</string>
    <string name="category_rules">版块规则</string>
    <string name="category_title">版块名称</string>
    <string name="chat_item_time">mon月day日 hour:min</string>
    <string name="check_all">全选</string>
    <string name="choose_js">选择插件</string>
    <string name="choose_js_file_tips">请选择要上传的JS文件</string>
    <string name="choose_map">选择地图</string>
    <string name="choose_map_folder_tips">请选择要上传的地图文件夹</string>
    <string name="choose_skin">选择皮肤</string>
    <string name="choose_skin_file_tips">请选择要上传的皮肤文件</string>
    <string name="choose_wood">选择材质</string>
    <string name="choose_wood_file_tips">请选择要上传的材质文件</string>
    <string name="daren_answer_1">达人堂是葫芦丝在某一个版块获得葫芦数的排行榜，装逼必备的东西。</string>
    <string name="daren_answer_2">在某一版块排名高高的有一定的荣誉感和归属感，重点是每个葫芦丝都能在达人堂的排名中看到你哦!</string>
    <string name="daren_answer_3">在相应版块获得他人赠送的葫芦便可以入驻达人堂，并且获得的数量累积越多，达人堂的排名也就越高。达人堂每周更新一次。</string>
    <string name="daren_quest_1">达人堂是什么？</string>
    <string name="daren_quest_2">达人堂有什么用？</string>
    <string name="daren_quest_3">排名怎么获得？</string>
    <string name="debuff">减益</string>
    <string name="filter_activetime">按回复时间</string>
    <string name="filter_createtime">按发布时间</string>
    <string name="filter_marrow">按本版精华</string>
    <string name="hint_address">收件地址（请详细）</string>
    <string name="hint_alipay">请填写支付宝帐号</string>
    <string name="hint_alipay_nick">请填写支付宝昵称，方便验证</string>
    <string name="hint_name">收货人姓名</string>
    <string name="hint_qq_number">请填写QQ号</string>
    <string name="hint_tel_number">请填写手机号</string>
    <string name="js">ＪＳ</string>
    <string name="loading_failed">加载失败,轻触屏幕刷新</string>
    <string name="loading_network_error_downline">点击屏幕刷新</string>
    <string name="manage_patches_import">导入</string>
    <string name="manage_patches_import_confirm">Do you want to import this patch?</string>
    <string name="manage_patches_info">Information</string>
    <string name="map">地图</string>
    <string name="max">最大</string>
    <string name="note_gift_mall">请注意：每月10日为商城开放兑换时间</string>
    <string name="potion_attack_off">攻击(关)</string>
    <string name="potion_attack_switch">药效作用于攻击</string>
    <string name="potion_continued_time">待续时间</string>
    <string name="potion_eat">嗑药</string>
    <string name="potion_remove">解除</string>
    <string name="refresh">重新刷新</string>
    <string name="root_360">查看使用360root电脑版获取权限教程</string>
    <string name="root_close">关闭</string>
    <string name="root_fail">获取root权限失败</string>
    <string name="root_mi">小米手机到安全中心设置Root权限</string>
    <string name="root_noroot">免Root方案</string>
    <string name="root_rooting">正在获取root权限</string>
    <string name="root_topic">下载一键Root解决方案</string>
    <string name="skin">皮肤</string>
    <string name="submit">提交</string>
    <string name="text">text</string>
    <string name="text_exchange_gift">兑换物品</string>
    <string name="text_hulu_comsume">消耗葫芦</string>
    <string name="unknown">未知</string>
    <string name="wood">材质</string>
</resources>