<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_user_info" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/et_name" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:hint="@string/hint_name" android:maxLength="20" style="@style/EditTextExchanged" />
            <EditText android:id="@id/et_tel_num" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_tel_number" android:maxLength="22" android:inputType="phone" style="@style/EditTextExchanged" />
            <EditText android:gravity="center|left|top" android:id="@id/et_address" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/hint_address" android:lines="4" android:singleLine="false" android:maxLength="60" style="@style/EditTextExchanged" />
            <EditText android:id="@id/et_qq_num" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_qq_number" android:maxLength="15" android:inputType="number" style="@style/EditTextExchanged" />
            <EditText android:id="@id/et_alipay_account" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_alipay" android:maxLength="20" style="@style/EditTextExchanged" />
            <EditText android:id="@id/et_alipay_nick" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/hint_alipay_nick" android:maxLength="20" style="@style/EditTextExchanged" />
        </LinearLayout>
        <RelativeLayout android:id="@id/rl_gift_info" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_below="@id/ll_user_info">
            <View android:id="@id/split1" android:background="?splitColor" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textSize="15.0sp" android:textColor="?android:textColorSecondary" android:id="@id/tv_gift_text" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_exchange_gift" />
            <TextView android:textSize="15.0sp" android:textColor="?android:textColorSecondary" android:id="@id/tv_gift_name" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unknown" android:layout_alignParentRight="true" />
            <View android:id="@id/split2" android:background="?splitColor" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/tv_gift_text" />
        </RelativeLayout>
        <TextView android:textSize="14.0sp" android:textColor="@color/red_text_color" android:id="@id/tv_hulu_comsume" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unknown" android:layout_below="@id/rl_gift_info" android:layout_alignParentRight="true" />
        <TextView android:textSize="14.0sp" android:textColor="@color/red_text_color" android:id="@id/tv_hulu_text" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/text_hulu_comsume" android:layout_toLeftOf="@id/tv_hulu_comsume" android:layout_below="@id/rl_gift_info" />
        <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimaryInverse" android:gravity="center" android:id="@id/tv_submit" android:background="?backgroundButtonExchanged" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/submit" android:layout_below="@id/tv_hulu_comsume" android:layout_centerHorizontal="true" />
        <TextView android:textSize="12.0sp" android:textColor="?android:textColorSecondary" android:id="@id/tv_gift_mall_note" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/note_gift_mall" android:layout_below="@id/tv_submit" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>