<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/LyTopview" android:background="@drawable/bg_popwindow" android:paddingTop="30.0dip" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/LyRooting" android:background="@color/transparent" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="24.0sp" android:textColor="#ff8a8a8a" android:gravity="center" android:id="@id/TvRootingTip" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/root_rooting" />
        <TextView android:textSize="60.0sp" android:textColor="#ffff6600" android:gravity="center" android:id="@id/TvRootingCount" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="24" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/LyRootError" android:background="@color/transparent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="18.0sp" android:textColor="#ffff6600" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/root_fail" />
        <TextView android:textSize="11.0sp" android:textColor="#ff999999" android:gravity="center" android:id="@id/TvRootErrorTip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="很抱歉，您的手机需要安装权限管理程序并且获取root权限才能使用修改功能.root权限相当于苹果手机越狱.如果您已经获取root权限，请在root工具中开启葫芦侠权限设置并重启手机。" />
        <Button android:id="@id/BtnRootMiUI" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/root_mi" style="@style/value_button_lightgreen_all" />
        <Button android:id="@id/BtnRootTopic" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/root_topic" style="@style/value_button_green_all" />
        <Button android:id="@id/BtnRootOpenPcWeb" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/root_360" style="@style/value_button_green_all" />
        <Button android:id="@id/BtnRootErrorNoRoot" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="10.0dip" android:text="@string/root_noroot" style="@style/value_button_green_all" />
        <Button android:id="@id/BtnRootErrorClose" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="10.0dip" android:text="@string/root_close" style="@style/value_button_gray_green3" />
    </LinearLayout>
</RelativeLayout>