<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_topic_filter" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimaryInverse" android:gravity="center" android:id="@id/tv_filter_active_time" android:background="@drawable/btn_topic_filter_item_selector" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/filter_activetime" />
    <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimaryInverse" android:gravity="center" android:id="@id/tv_filter_marrow" android:background="@drawable/btn_topic_filter_item_selector" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/filter_marrow" />
    <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimaryInverse" android:gravity="center" android:id="@id/tv_filter_create_time" android:background="@drawable/btn_topic_filter_item_selector" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/filter_createtime" />
</LinearLayout>